# internal/delivery/http/handler.go
@@ -1,9 +1,10 @@
 package http
 
 import (
+	"net/http"
+
 	"github.com/felipeagger/go-boilerplate/internal/domain"
 	"github.com/gin-gonic/gin"
-	"net/http"
 )
 
 type Handler struct {
@@ -34,15 +35,72 @@ func (h *Handler) HealthCheck(c *gin.Context) {
 // @Accept  json
 // @Produce  json
 // @Param X-Client-Id header string true "Client identifier"
+// @Param Payload body domain.Signup true "Payload"
+// @Success 200 {object} domain.Signup
+// @Failure 400 {object} string
+// @Router /user/v1/register [post]
+func (h *Handler) Register(c *gin.Context) {
+
+	clientID := c.GetHeader("X-Client-Id")
+	if clientID == "" {
+		c.AbortWithStatusJSON(http.StatusForbidden, "X-Client-Id not found in headers")
+		return
+	}
+
+	var payload domain.Signup
+	if err := c.ShouldBindJSON(&payload); err != nil {
+		c.AbortWithStatusJSON(http.StatusUnprocessableEntity, gin.H{"error": err.Error()})
+		return
+	}
+
+	c.JSON(http.StatusOK, "Ok")
+}
+
+// Login godoc
+// @Summary Endpoint to login user
+// @Description Endpoint to login user
+// @Tags Login
+// @Accept  json
+// @Produce  json
+// @Param X-Client-Id header string true "Client identifier"
+// @Param Payload body domain.Login true "Payload"
+// @Success 200 {object} domain.LoginResponse
+// @Failure 401 {object} domain.LoginResponse
+// @Router /user/v1/login [post]
+func (h *Handler) Login(c *gin.Context) {
+
+	clientID := c.GetHeader("X-Client-Id")
+	if clientID == "" {
+		c.AbortWithStatusJSON(http.StatusForbidden, "X-Client-Id not found in headers")
+		return
+	}
+
+	var payload domain.Signup
+	if err := c.ShouldBindJSON(&payload); err != nil {
+		c.AbortWithStatusJSON(http.StatusUnprocessableEntity, gin.H{"error": err.Error()})
+		return
+	}
+
+	c.JSON(http.StatusOK, "Ok")
+}
+
+// Update godoc
+// @Summary Endpoint to update user
+// @Description Endpoint to update user
+// @Tags Update
+// @Accept  json
+// @Produce  json
+// @Param X-Client-Id header string true "Client identifier"
 // @Param X-Authorization header string true "Auth Token"
 // @Param Payload body domain.Signup true "Payload"
 // @Success 200 {object} domain.Signup
 // @Failure 400 {object} string
-// @Router /v1 [post]
-func (h *Handler) Register(c *gin.Context) {
+// @Failure 500 {object} string
+// @Router /user/v1/:userID [put]
+func (h *Handler) Update(c *gin.Context) {
 
-	clientId := c.GetHeader("X-Client-Id")
-	if clientId == "" {
+	clientID := c.GetHeader("X-Client-Id")
+	if clientID == "" {
 		c.AbortWithStatusJSON(http.StatusForbidden, "X-Client-Id not found in headers")
 		return
 	}
@@ -52,6 +110,8 @@ func (h *Handler) Register(c *gin.Context) {
 		c.AbortWithStatusJSON(http.StatusForbidden, "X-Authorization not found in headers")
 		return
 	}
+
+	// userID := c.Param("userID")
 
 	var payload domain.Signup
 	if err := c.ShouldBindJSON(&payload); err != nil {
