# internal/delivery/http/router.go
@@ -9,7 +9,7 @@ func RouterInit(engine *gin.Engine, handlers *Handler) {
 	group := engine.Group("/auth")
 
 	group.GET("/health-check", handlers.HealthCheck)
-	group.POST("/v1/register", handlers.Register)
-	//group.POST("/v2/login", handlers.Login)
+	group.POST("/user/v1/register", handlers.Register)
+	group.POST("/user/v1/login", handlers.Login)
+	group.PUT("/user/v1/:userID", handlers.Update)
 }
-
